force-app/main/default/objects/Loss_Category__c/Loss_Category__c.object-meta.xml
<CustomObject>
    <label>Head of Loss</label>
    <nameField>
        <displayFormat>HL {00000}</displayFormat>
        <label>Head of Loss No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Head of Losses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>