force-app/main/default/objects/Loss_Category__c/fields/Arbitration_Doc_Prep_to_Final_offer__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Doc_Prep_to_Final_offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arbitration Doc Prep to Final offer</label>
    <type>Checkbox</type>
</CustomField>