force-app/main/default/objects/Loss_Category__c/fields/Arbitration_Final_Offers_Count__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Final_Offers_Count__c</fullName>
    <label>Neg-Arb-2-Arbitration Final Offers</label>
    <summaryFilterItems>
        <field>Loss_Sub_Categories__c.Status__c</field>
        <operation>equals</operation>
        <value>Arbitration Final Offers</value>
    </summaryFilterItems>
    <summaryForeignKey>Loss_Sub_Categories__c.Loss_Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>