force-app/main/default/objects/Loss_Category__c/fields/Arbitration_Negotiation_Count__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Negotiation_Count__c</fullName>
    <label>Neg-Neg-12-Arbitration Negotiation Count</label>
    <summaryFilterItems>
        <field>Loss_Sub_Categories__c.Arbitration_in_Negotiation__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Loss_Sub_Categories__c.Loss_Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>