force-app/main/default/objects/Loss_Category__c/fields/Arbritration_Final_Offers_to_Abritrating__c.field-meta.xml
<CustomField>
    <fullName>Arbritration_Final_Offers_to_Abritrating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arbritration Final Offers to Abritrating</label>
    <type>Checkbox</type>
</CustomField>