force-app/main/default/objects/Loss_Category__c/fields/Claimant_Handler_Email__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Handler_Email__c</fullName>
    <label>Claimant Handler Email</label>
    <type>Email</type>
</CustomField>