force-app/main/default/objects/Loss_Category__c/fields/Confirm_Case_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Case_Settlement__c</fullName>
    <label>Neg-PS-3-Arbitration Completed Count</label>
    <summaryFilterItems>
        <field>Loss_Sub_Categories__c.Status__c</field>
        <operation>equals</operation>
        <value>Arbitrated</value>
    </summaryFilterItems>
    <summaryForeignKey>Loss_Sub_Categories__c.Loss_Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>