force-app/main/default/objects/Loss_Category__c/fields/Head_of_Loss_Type__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Loss_Type__c</fullName>
    <label>Head of Loss Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bereavement</fullName>
            </value>
            <value>
                <fullName>Disadvantage on Labour Market</fullName>
            </value>
            <value>
                <fullName>Future Financial Losses</fullName>
            </value>
            <value>
                <fullName>Legal Costs</fullName>
            </value>
            <value>
                <fullName>Loss of Congenial Employment</fullName>
            </value>
            <value>
                <fullName>Past Financial Losses</fullName>
            </value>
            <value>
                <fullName>Pain, Suffering &amp; Loss of Amenities</fullName>
            </value>
            <value>
                <fullName>Total Loss Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>