force-app/main/default/objects/Loss_Category__c/fields/Loss_Category_Types__c.field-meta.xml
<CustomField>
    <fullName>Loss_Category_Types__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loss Category Types</label>
    <referenceTo>Loss_Category_Types__c</referenceTo>
    <relationshipName>Loss_Categoryies</relationshipName>
    <type>Lookup</type>
</CustomField>