force-app/main/default/objects/Loss_Category__c/fields/Loss_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Loss_Item_Count__c</fullName>
    <label>Neg-Neg-6-Loss Item Count</label>
    <summaryForeignKey>Loss_Sub_Categories__c.Loss_Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>