force-app/main/default/objects/Loss_Category__c/fields/Negotiation_Status_Count__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Status_Count__c</fullName>
    <label>Neg-Neg-5-Negotiation Status Count</label>
    <summaryFilterItems>
        <field>Loss_Sub_Categories__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Settled, Arbitration Prep, Arbitration Final Offers, Arbitrating, Arbitrated,, Arbitration Doc Prep</value>
    </summaryFilterItems>
    <summaryForeignKey>Loss_Sub_Categories__c.Loss_Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>