force-app/main/default/objects/Loss_Category__c/fields/Negotiation_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Timeout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negotiation Timeout</label>
    <type>Checkbox</type>
</CustomField>