force-app/main/default/objects/Loss_Category__c/fields/Provisional_Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Actual_Value__c</fullName>
    <description>Provisional / actual value of damages</description>
    <label>Provisional / Actual Value</label>
    <summarizedField>Loss_Sub_Categories__c.Prov_Act_Value__c</summarizedField>
    <summaryForeignKey>Loss_Sub_Categories__c.Loss_Category__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>