force-app/main/default/objects/Loss_Category__c/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <label>Rationale</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>