force-app/main/default/objects/Loss_Category__c/fields/Refer_to_Arbitration_Count__c.field-meta.xml
<CustomField>
    <fullName>Refer_to_Arbitration_Count__c</fullName>
    <label>Neg-Neg-9-Refer to Arbitration Count</label>
    <summaryFilterItems>
        <field>Loss_Sub_Categories__c.Status__c</field>
        <operation>equals</operation>
        <value>Referred to Arbitration</value>
    </summaryFilterItems>
    <summaryForeignKey>Loss_Sub_Categories__c.Loss_Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>