force-app/main/default/objects/Loss_Category__c/fields/Settled_Status_Count__c.field-meta.xml
<CustomField>
    <fullName>Settled_Status_Count__c</fullName>
    <label>Finalisation-PS-2-Settled Status Count</label>
    <summaryFilterItems>
        <field>Loss_Sub_Categories__c.Status__c</field>
        <operation>equals</operation>
        <value>Settled</value>
    </summaryFilterItems>
    <summaryForeignKey>Loss_Sub_Categories__c.Loss_Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>