force-app/main/default/objects/Loss_Category__c/fields/Total_Arbitration_Award__c.field-meta.xml
<CustomField>
    <fullName>Total_Arbitration_Award__c</fullName>
    <label>Neg-Neg-4-Total Arbitration Award</label>
    <summarizedField>Loss_Sub_Categories__c.Arbitrator_Award__c</summarizedField>
    <summaryForeignKey>Loss_Sub_Categories__c.Loss_Category__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>