force-app/main/default/objects/Loss_Category__c/fields/Total_Defendant_Position__c.field-meta.xml
<CustomField>
    <fullName>Total_Defendant_Position__c</fullName>
    <label>Neg-Neg-2-Total Defendant Position</label>
    <summarizedField>Loss_Sub_Categories__c.Defendant_Position__c</summarizedField>
    <summaryForeignKey>Loss_Sub_Categories__c.Loss_Category__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>