force-app/main/default/objects/Loss_Category__c/recordTypes/Past_or_Future_Losses.recordType-meta.xml
<RecordType>
    <fullName>Past_or_Future_Losses</fullName>
    <active>true</active>
    <description>Past or Future Losses</description>
    <label>Past or Future Losses</label>
</RecordType>