force-app/main/default/objects/Loss_Category__c/recordTypes/Personal_Injury_and_Loss_of_Amenity.recordType-meta.xml
<RecordType>
    <fullName>Personal_Injury_and_Loss_of_Amenity</fullName>
    <active>true</active>
    <label>Personal Injury and Loss of Amenity</label>
</RecordType>