force-app/main/default/objects/Loss_Category__c/validationRules/Value_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Claimant_Position__c &lt; 0.0</errorConditionFormula>
    <errorMessage>Total value cannot be negative</errorMessage>
</ValidationRule>