force-app/main/default/objects/Loss_Category__c/validationRules/Value_cannot_exceed_25000_GBP.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_cannot_exceed_25000_GBP</fullName>
    <active>false</active>
    <errorConditionFormula>Total_Claimant_Position__c &gt; 25000</errorConditionFormula>
    <errorMessage>Total value cannot exceed 25,000 GBP</errorMessage>
</ValidationRule>