force-app/main/default/objects/Loss_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Head_of_Loss_Type__c</columns>
    <columns>Loss_Category_Types__c</columns>
    <columns>Schedule_of_Losses__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>